err/structspec.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/json_spec-0.10.1.dist-info'...
Listing './lib/python3.5/site-packages/jsonpointer-1.14.dist-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/jsonspec'...
Listing './lib/python3.5/site-packages/jsonspec/misc'...
Listing './lib/python3.5/site-packages/jsonspec/misc/schemas'...
Listing './lib/python3.5/site-packages/jsonspec/misc/schemas/draft-03'...
Listing './lib/python3.5/site-packages/jsonspec/misc/schemas/draft-04'...
Listing './lib/python3.5/site-packages/jsonspec/operations'...
Listing './lib/python3.5/site-packages/jsonspec/pointer'...
Listing './lib/python3.5/site-packages/jsonspec/reference'...
Listing './lib/python3.5/site-packages/jsonspec/validators'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/structspec'...
Listing './lib/python3.5/site-packages/structspec/languages'...
Compiling './lib/python3.5/site-packages/structspec/languages/python.py'...
***   File "./lib/python3.5/site-packages/structspec/languages/python.py", line 473
    exec '{} = {}'.format(optionName, value)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/structspec/test'...
Listing './lib/python3.5/site-packages/structspec-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
